src/test/resources/public/input/typechecking/fail/undeclared_id/fail05.jova
class Test{

}

class Main {

  public int main() {
    NotExistingClass test;

    return 0;
  }

}